--- a/ConsoleServer/ConsoleServer/ConsoleServer.vcxproj.filters
+++ b/ConsoleServer/ConsoleServer/ConsoleServer.vcxproj.filters
@@ -31,7 +31,7 @@
       <Filter>클래스 파일\Network</Filter>
     </ClInclude>
     <ClInclude Include="cPacket.h">
-      <Filter>헤더 파일</Filter>
+      <Filter>클래스 파일\Packet</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -45,7 +45,7 @@
       <Filter>클래스 파일\Network</Filter>
     </ClCompile>
     <ClCompile Include="cPacket.cpp">
-      <Filter>소스 파일</Filter>
+      <Filter>클래스 파일\Packet</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
