애니메이션 테스트용 이미지와 애니메이션을 작동시킬 액션 클래스

--- a/WindowsClient/WindowsClient/WindowsClient.vcxproj
+++ b/WindowsClient/WindowsClient/WindowsClient.vcxproj
@@ -147,11 +147,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Action.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="AnimationManagent.h" />
     <ClInclude Include="GameNode.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="InputField.h" />
+    <ClInclude Include="Scene.h" />
     <ClInclude Include="TestScene.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Resource.h" />
@@ -163,6 +165,7 @@
     <ClInclude Include="WindowsClient.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Action.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="AnimationManagent.cpp" />
     <ClCompile Include="Image.cpp" />
